Добавить получение списка задач сортированного в порядке приоритета. Проверять при создании задач пересечение по времени выполнения. Откорретировать тесты в соотвествие с условием пересечения периодов.